examples/test/testpolicy17633.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17633
  namespace: namespace309
spec:
  podSelector:
    matchLabels:
      key12: value27
      key48: value44
      key26: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value37
          key47: value19
          key14: value18
